# Build options for Laniakea

#
# Test flags
#
option('test-flake8',
    type: 'boolean',
    value: true,
    description: 'Test Python code style with Flake8'
)

#
# Build config flags
#
option('download-js',
    type: 'boolean',
    value: true,
    description: 'Download JavaScript dependencies with Yarn when configuring the build'
)

#
# Feature flags
#
option('clitools',
    type: 'boolean',
    value: true,
    description: 'Build CLI administration tools.'
)
option('lighthouse',
    type: 'boolean',
    value: true,
    description: 'Build Lighthouse message relay and queue service'
)
option('dataimport',
    type: 'boolean',
    value: true,
    description: 'Build utility to import data from existing archives'
)
option('debcheck',
    type: 'boolean',
    value: true,
    description: 'Build dose/debcheck integration helper binary'
)
option('rubicon',
    type: 'boolean',
    value: true,
    description: 'Build rubicon upload accepting tool'
)
option('webgui',
    type: 'boolean',
    value: true,
    description: 'Build the web interfaces'
)
option('spears',
    type: 'boolean',
    value: true,
    description: 'Build the "Spears" Britney2 package migration integration'
)
option('synchrotron',
    type: 'boolean',
    value: true,
    description: 'Build the package synchronization module'
)
option('planter',
    type: 'boolean',
    value: true,
    description: 'Build the "Planter" metapackage seed / Germinator integration'
)
option('ariadne',
    type: 'boolean',
    value: true,
    description: 'Build the "Ariadne" package build planner'
)
option('daktape',
    type: 'boolean',
    value: true,
    description: 'Build the "DakTape" Debian Archive Kit (dak) bridge'
)
option('mirk',
    type: 'boolean',
    value: false,
    description: 'Enable the "mIrk" Matrix messaging bot'
)
