# Build options for Laniakea

#
# Test flags
#
option('linting',
    type: 'boolean',
    value: true,
    description: 'Enable code linters we want to run for static analysis.'
)
option('mypy-install-types',
    type: 'boolean',
    value: true,
    description: 'Make MyPy automatically install missing type stubs.'
)

#
# Build config flags
#
option('download-npm',
    type: 'boolean',
    value: true,
    description: 'Download web dependencies with NPM when configuring the build'
)

#
# Feature flags
#
option('docs',
    type: 'boolean',
    value: false,
    description: 'Enable target to build HTML documentation.'
)
option('clitools',
    type: 'boolean',
    value: true,
    description: 'Build CLI administration tools.'
)
option('lighthouse',
    type: 'boolean',
    value: true,
    description: 'Build Lighthouse message relay and queue service'
)
option('dataimport',
    type: 'boolean',
    value: true,
    description: 'Build utility to import data from existing archives'
)
option('debcheck',
    type: 'boolean',
    value: true,
    description: 'Build dose/debcheck integration helper binary'
)
option('rubicon',
    type: 'boolean',
    value: true,
    description: 'Build rubicon upload accepting tool'
)
option('webgui',
    type: 'boolean',
    value: true,
    description: 'Build the web interfaces'
)
option('spears',
    type: 'boolean',
    value: true,
    description: 'Build the "Spears" Britney2 package migration integration'
)
option('synchrotron',
    type: 'boolean',
    value: true,
    description: 'Build the package synchronization module'
)
option('planter',
    type: 'boolean',
    value: true,
    description: 'Build the "Planter" metapackage seed / Germinator integration'
)
option('ariadne',
    type: 'boolean',
    value: true,
    description: 'Build the "Ariadne" package build planner'
)
option('mirk',
    type: 'boolean',
    value: false,
    description: 'Enable the "mIrk" Matrix messaging bot'
)
