[project]
name = "laniakea"
description = "Suite of tools to manage a Debian-based Linux distribution."
authors = [
    "Matthias Klumpp <matthias@tenstral.net>"
]
license = "LGPL-3.0-or-later"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/lkorigin/laniakea"
repository = "https://github.com/lkorigin/laniakea"

[build-system]
requires = ["meson"]

[tool.laniakea.dependencies]
base = [
    'SQLAlchemy',
    'alembic',
    'psycopg2>=2.7.7',
    'python-debian',
    'python-apt',
    'pyzmq',
    'requests',
    'PyYAML>=5.3.1',
    'toml',
    'firehose',
    'humanize',
    'marshmallow',
    'tornado',
    'PyGObject',
    'PyNaCl',
    'systemd-python',
    'gir:AppStream~=1.0',
]
web = [
    'Flask',
    'Flask-Script',
    'Flask-RESTful',
    'Flask-Caching',
    'Flask-Login',
]
matrix = [
    'mautrix>=0.8.18',
]
tests = [
    'podman-compose',
    'pytest',
    'pytest-flask',
    'mypy',
    'flake8',
    'pylint',
    'pylint-flask',
    'pylint-sqlalchemy',
]
docs = [
    'Sphinx>=3.4',
    'Pygments>=2.6',
    'sphinx-autodoc-typehints',
    'sphinxawesome-theme',
]

[tool.pylint.master]
init-hook='''import os
import sys
from glob import glob
for p in glob("./src/*"):
    if p == 'laniakea':
        continue
    if os.path.isdir(p):
        sys.path.append(p)'''
extension-pkg-whitelist = ['apt_pkg']

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    'C', 'R',
    'fixme',
    'unused-argument',
    'global-statement',
    'logging-format-interpolation',
    'attribute-defined-outside-init',
    'protected-access',
    'comparison-with-callable', # https://github.com/PyCQA/pylint/issues/2757
    'broad-except',
    'redefined-builtin',

    # Fix these:
    'raise-missing-from',
    'redefined-outer-name',
    'unused-variable',
    'unspecified-encoding',
]

[tool.pylint.reports]
score = 'no'

[tool.pylint.typecheck]
ignored-modules = [
    'alembic.op',
    'alembic.context',
    'zmq',
    'mautrix.types'
]
