[project]
name = "laniakea"
description = "Suite of tools to manage a Debian-based Linux distribution."
authors = [
    {name = "Matthias Klumpp", email = "matthias@tenstral.net"},
]
license = {text="LGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Documentation = "https://github.com/lkhq/laniakea"
Source = "https://github.com/lkhq/laniakea"

[build-system]
requires = ["meson"]

[tool.laniakea.dependencies]
base = [
    'SQLAlchemy',
    'alembic',
    'psycopg2>=2.7.7',
    'python-debian',
    'python-apt>=2.2.1',
    'pyzmq',
    'Pebble>=4.6',
    'requests',
    'PyYAML>=5.3.1',
    'tomlkit>=0.8',
    'APScheduler',
    'firehose',
    'humanize',
    'marshmallow',
    'tornado',
    'PyGObject',
    'PyNaCl',
    'systemd-python',
    'click>=7.1',
    'rich>=8.0',
    'voluptuous',
    'gir:AppStream~=1.0',
]
web = [
    'Flask',
    'Flask-RESTful',
    'Flask-Caching',
    'Flask-Login',
]
matrix = [
    'mautrix>=0.8.18',
]
tests = [
    'pytest',
    'pytest-flask',
    'mypy',
    'flake8',
    'pylint',
    'pylint-flask',
    'pylint-sqlalchemy',
    'isort',
    'black',
]
docs = [
    'Sphinx>=3.4',
    'Pygments>=2.6',
    'sphinx-autodoc-typehints',
    'sphinxawesome-theme',
]

[tool.pylint.master]
init-hook='''import os
import sys
from glob import glob
for p in glob("./src/*"):
    if p == 'laniakea':
        continue
    if os.path.isdir(p):
        sys.path.append(p)'''
extension-pkg-whitelist = ['apt_pkg']

[tool.pylint.format]
max-line-length = 140

[tool.pylint."messages control"]
disable = [
    'C', 'R',
    'fixme',
    'unused-argument',
    'global-statement',
    'logging-format-interpolation',
    'attribute-defined-outside-init',
    'protected-access',
    'comparison-with-callable', # https://github.com/PyCQA/pylint/issues/2757
    'broad-except',
    'redefined-builtin',

    # Fix these:
    'raise-missing-from',
    'redefined-outer-name',
    'unused-variable',
    'unspecified-encoding',
]

[tool.pylint.reports]
score = 'no'

[tool.pylint.typecheck]
ignored-modules = [
    'alembic.op',
    'alembic.context',
    'zmq',
    'mautrix.types'
]

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = true
log_level = "INFO"
log_format = "%(asctime)s - %(levelname)s: %(message)s"
log_date_format = "%H:%M:%S"
testpaths = [
    "tests",
]

[tool.isort]
py_version = 39
profile = "black"
multi_line_output = 3
skip_gitignore = true
length_sort = true
atomic = true
skip_glob = ["tests/test_data/*"]

[tool.black]
target-version = ['py39']
line-length = 120
skip-string-normalization = true
