# Meson definition for Laniakea - C Bindings

lk_cbind_src = [
    'libarchive.d',
    'zmq/zframe.d',
    'zmq/zclock.d',
    'zmq/zgossip.d',
    'zmq/zstr.d',
    'zmq/zloop.d',
    'zmq/zhashx.d',
    'zmq/zcertstore.d',
    'zmq/zlistx.d',
    'zmq/zsock.d',
    'zmq/czmq_library.d',
    'zmq/czmq_prelude.d',
    'zmq/zproxy.d',
    'zmq/zrex.d',
    'zmq/czmq.d',
    'zmq/zchunk.d',
    'zmq/zmsg.d',
    'zmq/zcert.d',
    'zmq/zarmour.d',
    'zmq/zhash.d',
    'zmq/zsys.d',
    'zmq/zdigest.d',
    'zmq/zauth.d',
    'zmq/zfile.d',
    'zmq/zdir_patch.d',
    'zmq/zmonitor.d',
    'zmq/ziflist.d',
    'zmq/zbeacon.d',
    'zmq/zlist.d',
    'zmq/zmq.d',
    'zmq/package.d',
    'zmq/zpoller.d',
    'zmq/zuuid.d',
    'zmq/zactor.d',
    'zmq/zconfig.d',
    'zmq/zdir.d'
]

lk_cbind_lib = static_library ('lkcbind',
    [lk_cbind_src],
    include_directories: [src_dir],
    dependencies: [archive_dep,
                   czmq_dep]
)
